@@ -16,20 +16,27 @@
 
 package org.hotswap.agent.javassist.bytecode;
 
-import java.io.*;
+import java.io.ByteArrayOutputStream;
+import java.io.DataInputStream;
+import java.io.DataOutputStream;
+import java.io.IOException;
+import java.io.PrintWriter;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
+import org.hotswap.agent.javassist.CtClass;
+
 /**
  * Constant pool table.
  */
-public final class ConstPool {
+public final class ConstPool
+{
     LongVector items;
     int numOfItems;
     int thisClassInfo;
-    HashMap itemsCache;
+    Map<ConstInfo,ConstInfo> itemsCache;
 
     /**
      * <code>CONSTANT_Class</code>
@@ -50,7 +57,7 @@ public final class ConstPool {
      * <code>CONSTANT_InterfaceMethodref</code>
      */
     public static final int CONST_InterfaceMethodref
-            = InterfaceMethodrefInfo.tag;
+                                        = InterfaceMethodrefInfo.tag;
 
     /**
      * <code>CONSTANT_String</code>
@@ -88,14 +95,34 @@ public final class ConstPool {
     public static final int CONST_Utf8 = Utf8Info.tag;
 
     /**
-     * <code>Cosnt_MethodHandle</code>
+     * <code>CONSTANT_MethodHandle</code>
      */
     public static final int CONST_MethodHandle = MethodHandleInfo.tag;
 
     /**
+     * <code>CONSTANT_MethodHandle</code>
+     */
+    public static final int CONST_MethodType = MethodTypeInfo.tag;
+
+    /**
+     * <code>CONSTANT_MethodHandle</code>
+     */
+    public static final int CONST_InvokeDynamic = InvokeDynamicInfo.tag;
+
+    /**
+     * <code>CONSTANT_Module</code>
+     */
+    public static final int CONST_Module = ModuleInfo.tag;
+
+    /**
+     * <code>CONSTANT_Package</code>
+     */
+    public static final int CONST_Package = PackageInfo.tag;
+
+    /**
      * Represents the class using this constant pool table.
      */
-    public static final org.hotswap.agent.javassist.CtClass THIS = null;
+    public static final CtClass THIS = null;
 
     /**
      * <code>reference_kind</code> of <code>CONSTANT_MethodHandle_info</code>.
@@ -145,10 +172,11 @@ public final class ConstPool {
     /**
      * Constructs a constant pool table.
      *
-     * @param thisclass the name of the class using this constant
-     *                  pool table
+     * @param thisclass         the name of the class using this constant
+     *                          pool table
      */
-    public ConstPool(String thisclass) {
+    public ConstPool(String thisclass)
+    {
         items = new LongVector();
         itemsCache = null;
         numOfItems = 0;
@@ -159,9 +187,10 @@ public final class ConstPool {
     /**
      * Constructs a constant pool table from the given byte stream.
      *
-     * @param in byte stream.
+     * @param in        byte stream.
      */
-    public ConstPool(DataInputStream in) throws IOException {
+    public ConstPool(DataInputStream in) throws IOException
+    {
         itemsCache = null;
         thisClassInfo = 0;
         /* read() initializes items and numOfItems, and do addItem(null).
@@ -169,21 +198,24 @@ public final class ConstPool {
         read(in);
     }
 
-    void prune() {
+    void prune()
+    {
         itemsCache = null;
     }
 
     /**
      * Returns the number of entries in this table.
      */
-    public int getSize() {
+    public int getSize()
+    {
         return numOfItems;
     }
 
     /**
      * Returns the name of the class using this constant pool table.
      */
-    public String getClassName() {
+    public String getClassName()
+    {
         return getClassInfo(thisClassInfo);
     }
 
@@ -191,23 +223,30 @@ public final class ConstPool {
      * Returns the index of <code>CONSTANT_Class_info</code> structure
      * specifying the class using this constant pool table.
      */
-    public int getThisClassInfo() {
+    public int getThisClassInfo()
+    {
         return thisClassInfo;
     }
 
-    void setThisClassInfo(int i) {
+    void setThisClassInfo(int i)
+    {
         thisClassInfo = i;
     }
 
-    ConstInfo getItem(int n) {
+    ConstInfo getItem(int n)
+    {
         return items.elementAt(n);
     }
 
     /**
      * Returns the <code>tag</code> field of the constant pool table
      * entry at the given index.
+     *
+     * @return either <code>CONST_Class</code>, <code>CONST_Fieldref</code>,
+     *         <code>CONST_Methodref</code>, or ...  
      */
-    public int getTag(int index) {
+    public int getTag(int index)
+    {
         return getItem(index).getTag();
     }
 
@@ -215,41 +254,39 @@ public final class ConstPool {
      * Reads <code>CONSTANT_Class_info</code> structure
      * at the given index.
      *
-     * @return a fully-qualified class or interface name specified
-     * by <code>name_index</code>.  If the type is an array
-     * type, this method returns an encoded name like
-     * <code>[Ljava.lang.Object;</code> (note that the separators
-     * are not slashes but dots).
-     * @see org.hotswap.agent.javassist.ClassPool#getCtClass(String)
+     * @return  a fully-qualified class or interface name specified
+     *          by <code>name_index</code>.  If the type is an array
+     *          type, this method returns an encoded name like
+     *          <code>[Ljava.lang.Object;</code> (note that the separators
+     *          are not slashes but dots).
+     * @see javassist.ClassPool#getCtClass(String)
      */
-    public String getClassInfo(int index) {
-        ClassInfo c = (ClassInfo) getItem(index);
+    public String getClassInfo(int index)
+    {
+        ClassInfo c = (ClassInfo)getItem(index);
         if (c == null)
             return null;
-        else
-            return Descriptor.toJavaName(getUtf8Info(c.name));
+        return Descriptor.toJavaName(getUtf8Info(c.name));
     }
 
     /**
      * Reads <code>CONSTANT_Class_info</code> structure
      * at the given index.
      *
-     * @return the descriptor of the type specified
-     * by <code>name_index</code>.
-     * @see org.hotswap.agent.javassist.ClassPool#getCtClass(String)
+     * @return  the descriptor of the type specified
+     *          by <code>name_index</code>.
+     * @see javassist.ClassPool#getCtClass(String)
      * @since 3.15
      */
-    public String getClassInfoByDescriptor(int index) {
-        ClassInfo c = (ClassInfo) getItem(index);
+    public String getClassInfoByDescriptor(int index)
+    {
+        ClassInfo c = (ClassInfo)getItem(index);
         if (c == null)
             return null;
-        else {
-            String className = getUtf8Info(c.name);
-            if (className.charAt(0) == '[')
-                return className;
-            else
-                return Descriptor.of(className);
-        }
+        String className = getUtf8Info(c.name);
+        if (className.charAt(0) == '[')
+            return className;
+        return Descriptor.of(className);
     }
 
     /**
@@ -257,8 +294,9 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * at the given index.
      */
-    public int getNameAndTypeName(int index) {
-        NameAndTypeInfo ntinfo = (NameAndTypeInfo) getItem(index);
+    public int getNameAndTypeName(int index)
+    {
+        NameAndTypeInfo ntinfo = (NameAndTypeInfo)getItem(index);
         return ntinfo.memberName;
     }
 
@@ -267,8 +305,9 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * at the given index.
      */
-    public int getNameAndTypeDescriptor(int index) {
-        NameAndTypeInfo ntinfo = (NameAndTypeInfo) getItem(index);
+    public int getNameAndTypeDescriptor(int index)
+    {
+        NameAndTypeInfo ntinfo = (NameAndTypeInfo)getItem(index);
         return ntinfo.typeDescriptor;
     }
 
@@ -281,8 +320,9 @@ public final class ConstPool {
      *
      * @since 3.6
      */
-    public int getMemberClass(int index) {
-        MemberrefInfo minfo = (MemberrefInfo) getItem(index);
+    public int getMemberClass(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.classIndex;
     }
 
@@ -295,8 +335,9 @@ public final class ConstPool {
      *
      * @since 3.6
      */
-    public int getMemberNameAndType(int index) {
-        MemberrefInfo minfo = (MemberrefInfo) getItem(index);
+    public int getMemberNameAndType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.nameAndTypeIndex;
     }
 
@@ -305,8 +346,9 @@ public final class ConstPool {
      * <code>CONSTANT_Fieldref_info</code> structure
      * at the given index.
      */
-    public int getFieldrefClass(int index) {
-        FieldrefInfo finfo = (FieldrefInfo) getItem(index);
+    public int getFieldrefClass(int index)
+    {
+        FieldrefInfo finfo = (FieldrefInfo)getItem(index);
         return finfo.classIndex;
     }
 
@@ -317,12 +359,12 @@ public final class ConstPool {
      *
      * @return the name of the class at that <code>class_index</code>.
      */
-    public String getFieldrefClassName(int index) {
-        FieldrefInfo f = (FieldrefInfo) getItem(index);
+    public String getFieldrefClassName(int index)
+    {
+        FieldrefInfo f = (FieldrefInfo)getItem(index);
         if (f == null)
             return null;
-        else
-            return getClassInfo(f.classIndex);
+        return getClassInfo(f.classIndex);
     }
 
     /**
@@ -330,8 +372,9 @@ public final class ConstPool {
      * <code>CONSTANT_Fieldref_info</code> structure
      * at the given index.
      */
-    public int getFieldrefNameAndType(int index) {
-        FieldrefInfo finfo = (FieldrefInfo) getItem(index);
+    public int getFieldrefNameAndType(int index)
+    {
+        FieldrefInfo finfo = (FieldrefInfo)getItem(index);
         return finfo.nameAndTypeIndex;
     }
 
@@ -340,20 +383,18 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * indirectly specified by the given index.
      *
-     * @param index an index to a <code>CONSTANT_Fieldref_info</code>.
-     * @return the name of the field.
+     * @param index     an index to a <code>CONSTANT_Fieldref_info</code>.
+     * @return  the name of the field.
      */
-    public String getFieldrefName(int index) {
-        FieldrefInfo f = (FieldrefInfo) getItem(index);
+    public String getFieldrefName(int index)
+    {
+        FieldrefInfo f = (FieldrefInfo)getItem(index);
         if (f == null)
             return null;
-        else {
-            NameAndTypeInfo n = (NameAndTypeInfo) getItem(f.nameAndTypeIndex);
-            if (n == null)
-                return null;
-            else
-                return getUtf8Info(n.memberName);
-        }
+        NameAndTypeInfo n = (NameAndTypeInfo)getItem(f.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.memberName);
     }
 
     /**
@@ -361,20 +402,18 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * indirectly specified by the given index.
      *
-     * @param index an index to a <code>CONSTANT_Fieldref_info</code>.
-     * @return the type descriptor of the field.
+     * @param index     an index to a <code>CONSTANT_Fieldref_info</code>.
+     * @return  the type descriptor of the field.
      */
-    public String getFieldrefType(int index) {
-        FieldrefInfo f = (FieldrefInfo) getItem(index);
+    public String getFieldrefType(int index)
+    {
+        FieldrefInfo f = (FieldrefInfo)getItem(index);
         if (f == null)
             return null;
-        else {
-            NameAndTypeInfo n = (NameAndTypeInfo) getItem(f.nameAndTypeIndex);
-            if (n == null)
-                return null;
-            else
-                return getUtf8Info(n.typeDescriptor);
-        }
+        NameAndTypeInfo n = (NameAndTypeInfo)getItem(f.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.typeDescriptor);
     }
 
     /**
@@ -382,8 +421,9 @@ public final class ConstPool {
      * <code>CONSTANT_Methodref_info</code> structure
      * at the given index.
      */
-    public int getMethodrefClass(int index) {
-        MethodrefInfo minfo = (MethodrefInfo) getItem(index);
+    public int getMethodrefClass(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.classIndex;
     }
 
@@ -394,12 +434,12 @@ public final class ConstPool {
      *
      * @return the name of the class at that <code>class_index</code>.
      */
-    public String getMethodrefClassName(int index) {
-        MethodrefInfo minfo = (MethodrefInfo) getItem(index);
+    public String getMethodrefClassName(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else
-            return getClassInfo(minfo.classIndex);
+        return getClassInfo(minfo.classIndex);
     }
 
     /**
@@ -407,8 +447,9 @@ public final class ConstPool {
      * <code>CONSTANT_Methodref_info</code> structure
      * at the given index.
      */
-    public int getMethodrefNameAndType(int index) {
-        MethodrefInfo minfo = (MethodrefInfo) getItem(index);
+    public int getMethodrefNameAndType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.nameAndTypeIndex;
     }
 
@@ -417,21 +458,19 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * indirectly specified by the given index.
      *
-     * @param index an index to a <code>CONSTANT_Methodref_info</code>.
-     * @return the name of the method.
+     * @param index     an index to a <code>CONSTANT_Methodref_info</code>.
+     * @return  the name of the method.
      */
-    public String getMethodrefName(int index) {
-        MethodrefInfo minfo = (MethodrefInfo) getItem(index);
+    public String getMethodrefName(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else {
-            NameAndTypeInfo n
-                    = (NameAndTypeInfo) getItem(minfo.nameAndTypeIndex);
-            if (n == null)
-                return null;
-            else
-                return getUtf8Info(n.memberName);
-        }
+        NameAndTypeInfo n
+            = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.memberName);
     }
 
     /**
@@ -439,21 +478,19 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * indirectly specified by the given index.
      *
-     * @param index an index to a <code>CONSTANT_Methodref_info</code>.
-     * @return the descriptor of the method.
+     * @param index     an index to a <code>CONSTANT_Methodref_info</code>.
+     * @return  the descriptor of the method.
      */
-    public String getMethodrefType(int index) {
-        MethodrefInfo minfo = (MethodrefInfo) getItem(index);
+    public String getMethodrefType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else {
-            NameAndTypeInfo n
-                    = (NameAndTypeInfo) getItem(minfo.nameAndTypeIndex);
-            if (n == null)
-                return null;
-            else
-                return getUtf8Info(n.typeDescriptor);
-        }
+        NameAndTypeInfo n
+            = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.typeDescriptor);
     }
 
     /**
@@ -461,9 +498,9 @@ public final class ConstPool {
      * <code>CONSTANT_InterfaceMethodref_info</code> structure
      * at the given index.
      */
-    public int getInterfaceMethodrefClass(int index) {
-        InterfaceMethodrefInfo minfo
-                = (InterfaceMethodrefInfo) getItem(index);
+    public int getInterfaceMethodrefClass(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.classIndex;
     }
 
@@ -474,9 +511,9 @@ public final class ConstPool {
      *
      * @return the name of the class at that <code>class_index</code>.
      */
-    public String getInterfaceMethodrefClassName(int index) {
-        InterfaceMethodrefInfo minfo
-                = (InterfaceMethodrefInfo) getItem(index);
+    public String getInterfaceMethodrefClassName(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return getClassInfo(minfo.classIndex);
     }
 
@@ -485,9 +522,9 @@ public final class ConstPool {
      * <code>CONSTANT_InterfaceMethodref_info</code> structure
      * at the given index.
      */
-    public int getInterfaceMethodrefNameAndType(int index) {
-        InterfaceMethodrefInfo minfo
-                = (InterfaceMethodrefInfo) getItem(index);
+    public int getInterfaceMethodrefNameAndType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         return minfo.nameAndTypeIndex;
     }
 
@@ -496,23 +533,20 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * indirectly specified by the given index.
      *
-     * @param index an index to
-     *              a <code>CONSTANT_InterfaceMethodref_info</code>.
-     * @return the name of the method.
+     * @param index     an index to
+     *                  a <code>CONSTANT_InterfaceMethodref_info</code>.
+     * @return  the name of the method.
      */
-    public String getInterfaceMethodrefName(int index) {
-        InterfaceMethodrefInfo minfo
-                = (InterfaceMethodrefInfo) getItem(index);
+    public String getInterfaceMethodrefName(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else {
-            NameAndTypeInfo n
-                    = (NameAndTypeInfo) getItem(minfo.nameAndTypeIndex);
-            if (n == null)
-                return null;
-            else
-                return getUtf8Info(n.memberName);
-        }
+        NameAndTypeInfo n
+            = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.memberName);
     }
 
     /**
@@ -520,25 +554,21 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * indirectly specified by the given index.
      *
-     * @param index an index to
-     *              a <code>CONSTANT_InterfaceMethodref_info</code>.
-     * @return the descriptor of the method.
+     * @param index     an index to
+     *                  a <code>CONSTANT_InterfaceMethodref_info</code>.
+     * @return  the descriptor of the method.
      */
-    public String getInterfaceMethodrefType(int index) {
-        InterfaceMethodrefInfo minfo
-                = (InterfaceMethodrefInfo) getItem(index);
+    public String getInterfaceMethodrefType(int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (minfo == null)
             return null;
-        else {
-            NameAndTypeInfo n
-                    = (NameAndTypeInfo) getItem(minfo.nameAndTypeIndex);
-            if (n == null)
-                return null;
-            else
-                return getUtf8Info(n.typeDescriptor);
-        }
+        NameAndTypeInfo n
+            = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.typeDescriptor);
     }
-
     /**
      * Reads <code>CONSTANT_Integer_info</code>, <code>_Float_info</code>,
      * <code>_Long_info</code>, <code>_Double_info</code>, or
@@ -548,21 +578,20 @@ public final class ConstPool {
      * @return a <code>String</code> value or a wrapped primitive-type
      * value.
      */
-    public Object getLdcValue(int index) {
+    public Object getLdcValue(int index)
+    {
         ConstInfo constInfo = this.getItem(index);
         Object value = null;
         if (constInfo instanceof StringInfo)
             value = this.getStringInfo(index);
         else if (constInfo instanceof FloatInfo)
-            value = new Float(getFloatInfo(index));
+            value = Float.valueOf(getFloatInfo(index));
         else if (constInfo instanceof IntegerInfo)
-            value = new Integer(getIntegerInfo(index));
+            value = Integer.valueOf(getIntegerInfo(index));
         else if (constInfo instanceof LongInfo)
-            value = new Long(getLongInfo(index));
+            value = Long.valueOf(getLongInfo(index));
         else if (constInfo instanceof DoubleInfo)
-            value = new Double(getDoubleInfo(index));
-        else
-            value = null;
+            value = Double.valueOf(getDoubleInfo(index));
 
         return value;
     }
@@ -573,8 +602,9 @@ public final class ConstPool {
      *
      * @return the value specified by this entry.
      */
-    public int getIntegerInfo(int index) {
-        IntegerInfo i = (IntegerInfo) getItem(index);
+    public int getIntegerInfo(int index)
+    {
+        IntegerInfo i = (IntegerInfo)getItem(index);
         return i.value;
     }
 
@@ -584,8 +614,9 @@ public final class ConstPool {
      *
      * @return the value specified by this entry.
      */
-    public float getFloatInfo(int index) {
-        FloatInfo i = (FloatInfo) getItem(index);
+    public float getFloatInfo(int index)
+    {
+        FloatInfo i = (FloatInfo)getItem(index);
         return i.value;
     }
 
@@ -595,8 +626,9 @@ public final class ConstPool {
      *
      * @return the value specified by this entry.
      */
-    public long getLongInfo(int index) {
-        LongInfo i = (LongInfo) getItem(index);
+    public long getLongInfo(int index)
+    {
+        LongInfo i = (LongInfo)getItem(index);
         return i.value;
     }
 
@@ -606,8 +638,9 @@ public final class ConstPool {
      *
      * @return the value specified by this entry.
      */
-    public double getDoubleInfo(int index) {
-        DoubleInfo i = (DoubleInfo) getItem(index);
+    public double getDoubleInfo(int index)
+    {
+        DoubleInfo i = (DoubleInfo)getItem(index);
         return i.value;
     }
 
@@ -617,8 +650,9 @@ public final class ConstPool {
      *
      * @return the string specified by <code>string_index</code>.
      */
-    public String getStringInfo(int index) {
-        StringInfo si = (StringInfo) getItem(index);
+    public String getStringInfo(int index)
+    {
+        StringInfo si = (StringInfo)getItem(index);
         return getUtf8Info(si.string);
     }
 
@@ -628,8 +662,9 @@ public final class ConstPool {
      *
      * @return the string specified by this entry.
      */
-    public String getUtf8Info(int index) {
-        Utf8Info utf = (Utf8Info) getItem(index);
+    public String getUtf8Info(int index)
+    {
+        Utf8Info utf = (Utf8Info)getItem(index);
         return utf.string;
     }
 
@@ -649,8 +684,9 @@ public final class ConstPool {
      * @see #REF_putStatic
      * @since 3.17
      */
-    public int getMethodHandleKind(int index) {
-        MethodHandleInfo mhinfo = (MethodHandleInfo) getItem(index);
+    public int getMethodHandleKind(int index)
+    {
+        MethodHandleInfo mhinfo = (MethodHandleInfo)getItem(index);
         return mhinfo.refKind;
     }
 
@@ -661,8 +697,9 @@ public final class ConstPool {
      *
      * @since 3.17
      */
-    public int getMethodHandleIndex(int index) {
-        MethodHandleInfo mhinfo = (MethodHandleInfo) getItem(index);
+    public int getMethodHandleIndex(int index)
+    {
+        MethodHandleInfo mhinfo = (MethodHandleInfo)getItem(index);
         return mhinfo.refIndex;
     }
 
@@ -673,8 +710,9 @@ public final class ConstPool {
      *
      * @since 3.17
      */
-    public int getMethodTypeInfo(int index) {
-        MethodTypeInfo mtinfo = (MethodTypeInfo) getItem(index);
+    public int getMethodTypeInfo(int index)
+    {
+        MethodTypeInfo mtinfo = (MethodTypeInfo)getItem(index);
         return mtinfo.descriptor;
     }
 
@@ -685,8 +723,9 @@ public final class ConstPool {
      *
      * @since 3.17
      */
-    public int getInvokeDynamicBootstrap(int index) {
-        InvokeDynamicInfo iv = (InvokeDynamicInfo) getItem(index);
+    public int getInvokeDynamicBootstrap(int index)
+    {
+        InvokeDynamicInfo iv = (InvokeDynamicInfo)getItem(index);
         return iv.bootstrap;
     }
 
@@ -697,8 +736,9 @@ public final class ConstPool {
      *
      * @since 3.17
      */
-    public int getInvokeDynamicNameAndType(int index) {
-        InvokeDynamicInfo iv = (InvokeDynamicInfo) getItem(index);
+    public int getInvokeDynamicNameAndType(int index)
+    {
+        InvokeDynamicInfo iv = (InvokeDynamicInfo)getItem(index);
         return iv.nameAndType;
     }
 
@@ -707,21 +747,46 @@ public final class ConstPool {
      * <code>CONSTANT_NameAndType_info</code> structure
      * indirectly specified by the given index.
      *
-     * @param index an index to a <code>CONSTANT_InvokeDynamic_info</code>.
-     * @return the descriptor of the method.
+     * @param index     an index to a <code>CONSTANT_InvokeDynamic_info</code>.
+     * @return  the descriptor of the method.
      * @since 3.17
      */
-    public String getInvokeDynamicType(int index) {
-        InvokeDynamicInfo iv = (InvokeDynamicInfo) getItem(index);
+    public String getInvokeDynamicType(int index)
+    {
+        InvokeDynamicInfo iv = (InvokeDynamicInfo)getItem(index);
         if (iv == null)
             return null;
-        else {
-            NameAndTypeInfo n = (NameAndTypeInfo) getItem(iv.nameAndType);
-            if (n == null)
-                return null;
-            else
-                return getUtf8Info(n.typeDescriptor);
-        }
+        NameAndTypeInfo n = (NameAndTypeInfo)getItem(iv.nameAndType);
+        if(n == null)
+            return null;
+        return getUtf8Info(n.typeDescriptor);
+    }
+
+    /**
+     * Reads the <code>name_index</code> field of the
+     * <code>CONSTANT_Module_info</code> structure at the given index.
+     *
+     * @return the module name at <code>name_index</code>.
+     * @since 3.22
+     */
+    public String getModuleInfo(int index)
+    {
+        ModuleInfo mi = (ModuleInfo)getItem(index);
+        return getUtf8Info(mi.name);
+    }
+
+    /**
+     * Reads the <code>name_index</code> field of the
+     * <code>CONSTANT_Package_info</code> structure at the given index.
+     *
+     * @return the package name at <code>name_index</code>.  It is a slash-
+     * separated name such as com/oracle/net.
+     * @since 3.22
+     */
+    public String getPackageInfo(int index)
+    {
+        PackageInfo mi = (PackageInfo)getItem(index);
+        return getUtf8Info(mi.name);
     }
 
     /**
@@ -729,12 +794,13 @@ public final class ConstPool {
      * structure at the given index represents the constructor
      * of the given class.
      *
-     * @return the <code>descriptor_index</code> specifying
-     * the type descriptor of the that constructor.
-     * If it is not that constructor,
-     * <code>isConstructor()</code> returns 0.
+     * @return          the <code>descriptor_index</code> specifying
+     *                  the type descriptor of the that constructor.
+     *                  If it is not that constructor,
+     *                  <code>isConstructor()</code> returns 0.
      */
-    public int isConstructor(String classname, int index) {
+    public int isConstructor(String classname, int index)
+    {
         return isMember(classname, MethodInfo.nameInit, index);
     }
 
@@ -745,19 +811,21 @@ public final class ConstPool {
      * at the given index represents the member with the specified
      * name and declaring class.
      *
-     * @param classname  the class declaring the member
-     * @param membername the member name
-     * @param index      the index into the constant pool table
-     * @return the <code>descriptor_index</code> specifying
-     * the type descriptor of that member.
-     * If it is not that member,
-     * <code>isMember()</code> returns 0.
+     * @param classname         the class declaring the member
+     * @param membername        the member name
+     * @param index             the index into the constant pool table
+     *
+     * @return          the <code>descriptor_index</code> specifying
+     *                  the type descriptor of that member.
+     *                  If it is not that member,
+     *                  <code>isMember()</code> returns 0.
      */
-    public int isMember(String classname, String membername, int index) {
-        MemberrefInfo minfo = (MemberrefInfo) getItem(index);
+    public int isMember(String classname, String membername, int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         if (getClassInfo(minfo.classIndex).equals(classname)) {
             NameAndTypeInfo ntinfo
-                    = (NameAndTypeInfo) getItem(minfo.nameAndTypeIndex);
+                = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
             if (getUtf8Info(ntinfo.memberName).equals(membername))
                 return ntinfo.typeDescriptor;
         }
@@ -772,43 +840,44 @@ public final class ConstPool {
      * at the given index has the name and the descriptor
      * given as the arguments.
      *
-     * @param membername the member name
-     * @param desc       the descriptor of the member.
-     * @param index      the index into the constant pool table
-     * @return the name of the target class specified by
-     * the <code>..._info</code> structure
-     * at <code>index</code>.
-     * Otherwise, null if that structure does not
-     * match the given member name and descriptor.
+     * @param membername        the member name
+     * @param desc              the descriptor of the member.
+     * @param index             the index into the constant pool table
+     *
+     * @return          the name of the target class specified by
+     *                  the <code>..._info</code> structure
+     *                  at <code>index</code>.
+     *                  Otherwise, null if that structure does not 
+     *                  match the given member name and descriptor.
      */
-    public String eqMember(String membername, String desc, int index) {
-        MemberrefInfo minfo = (MemberrefInfo) getItem(index);
+    public String eqMember(String membername, String desc, int index)
+    {
+        MemberrefInfo minfo = (MemberrefInfo)getItem(index);
         NameAndTypeInfo ntinfo
-                = (NameAndTypeInfo) getItem(minfo.nameAndTypeIndex);
+                = (NameAndTypeInfo)getItem(minfo.nameAndTypeIndex);
         if (getUtf8Info(ntinfo.memberName).equals(membername)
-                && getUtf8Info(ntinfo.typeDescriptor).equals(desc))
+            && getUtf8Info(ntinfo.typeDescriptor).equals(desc))
             return getClassInfo(minfo.classIndex);
-        else
-            return null;       // false
+        return null;       // false
     }
 
-    private int addItem0(ConstInfo info) {
+    private int addItem0(ConstInfo info)
+    {
         items.addElement(info);
         return numOfItems++;
     }
 
-    private int addItem(ConstInfo info) {
+    private int addItem(ConstInfo info)
+    {
         if (itemsCache == null)
             itemsCache = makeItemsCache(items);
 
-        ConstInfo found = (ConstInfo) itemsCache.get(info);
+        ConstInfo found = itemsCache.get(info);
         if (found != null)
             return found.index;
-        else {
-            items.addElement(info);
-            itemsCache.put(info, info);
-            return numOfItems++;
-        }
+        items.addElement(info);
+        itemsCache.put(info, info);
+        return numOfItems++;
     }
 
     /**
@@ -817,12 +886,13 @@ public final class ConstPool {
      * The class names that the item refers to are renamed according
      * to the given map.
      *
-     * @param n          the <i>n</i>-th item
-     * @param dest       destination constant pool table
-     * @param classnames the map or null.
+     * @param n                 the <i>n</i>-th item
+     * @param dest              destination constant pool table
+     * @param classnames        the map or null.
      * @return the index of the copied item into the destination ClassPool.
      */
-    public int copy(int n, ConstPool dest, Map classnames) {
+    public int copy(int n, ConstPool dest, Map<String,String> classnames)
+    {
         if (n == 0)
             return 0;
 
@@ -836,13 +906,14 @@ public final class ConstPool {
 
     /**
      * Adds a new <code>CONSTANT_Class_info</code> structure.
-     * <p/>
+     *
      * <p>This also adds a <code>CONSTANT_Utf8_info</code> structure
      * for storing the class name.
      *
-     * @return the index of the added entry.
+     * @return          the index of the added entry.
      */
-    public int addClassInfo(org.hotswap.agent.javassist.CtClass c) {
+    public int addClassInfo(CtClass c)
+    {
         if (c == THIS)
             return thisClassInfo;
         else if (!c.isArray())
@@ -859,57 +930,61 @@ public final class ConstPool {
 
     /**
      * Adds a new <code>CONSTANT_Class_info</code> structure.
-     * <p/>
+     *
      * <p>This also adds a <code>CONSTANT_Utf8_info</code> structure
      * for storing the class name.
      *
-     * @param qname a fully-qualified class name
-     *              (or the JVM-internal representation of that name).
-     * @return the index of the added entry.
+     * @param qname     a fully-qualified class name
+     *                  (or the JVM-internal representation of that name).
+     * @return          the index of the added entry.
      */
-    public int addClassInfo(String qname) {
+    public int addClassInfo(String qname)
+    {
         int utf8 = addUtf8Info(Descriptor.toJvmName(qname));
         return addItem(new ClassInfo(utf8, numOfItems));
     }
 
     /**
      * Adds a new <code>CONSTANT_NameAndType_info</code> structure.
-     * <p/>
+     *
      * <p>This also adds <code>CONSTANT_Utf8_info</code> structures.
      *
-     * @param name <code>name_index</code>
-     * @param type <code>descriptor_index</code>
-     * @return the index of the added entry.
+     * @param name      <code>name_index</code>
+     * @param type      <code>descriptor_index</code>
+     * @return          the index of the added entry.
      */
-    public int addNameAndTypeInfo(String name, String type) {
+    public int addNameAndTypeInfo(String name, String type)
+    {
         return addNameAndTypeInfo(addUtf8Info(name), addUtf8Info(type));
     }
 
     /**
      * Adds a new <code>CONSTANT_NameAndType_info</code> structure.
      *
-     * @param name <code>name_index</code>
-     * @param type <code>descriptor_index</code>
-     * @return the index of the added entry.
+     * @param name      <code>name_index</code>
+     * @param type      <code>descriptor_index</code>
+     * @return          the index of the added entry.
      */
-    public int addNameAndTypeInfo(int name, int type) {
+    public int addNameAndTypeInfo(int name, int type)
+    {
         return addItem(new NameAndTypeInfo(name, type, numOfItems));
     }
 
     /**
      * Adds a new <code>CONSTANT_Fieldref_info</code> structure.
-     * <p/>
+     *
      * <p>This also adds a new <code>CONSTANT_NameAndType_info</code>
      * structure.
      *
-     * @param classInfo <code>class_index</code>
-     * @param name      <code>name_index</code>
-     *                  of <code>CONSTANT_NameAndType_info</code>.
-     * @param type      <code>descriptor_index</code>
-     *                  of <code>CONSTANT_NameAndType_info</code>.
-     * @return the index of the added entry.
+     * @param classInfo         <code>class_index</code>
+     * @param name              <code>name_index</code>
+     *                          of <code>CONSTANT_NameAndType_info</code>.
+     * @param type              <code>descriptor_index</code>
+     *                          of <code>CONSTANT_NameAndType_info</code>.
+     * @return          the index of the added entry.
      */
-    public int addFieldrefInfo(int classInfo, String name, String type) {
+    public int addFieldrefInfo(int classInfo, String name, String type)
+    {
         int nt = addNameAndTypeInfo(name, type);
         return addFieldrefInfo(classInfo, nt);
     }
@@ -917,28 +992,31 @@ public final class ConstPool {
     /**
      * Adds a new <code>CONSTANT_Fieldref_info</code> structure.
      *
-     * @param classInfo       <code>class_index</code>
-     * @param nameAndTypeInfo <code>name_and_type_index</code>.
-     * @return the index of the added entry.
+     * @param classInfo         <code>class_index</code>
+     * @param nameAndTypeInfo   <code>name_and_type_index</code>.
+     * @return          the index of the added entry.
      */
-    public int addFieldrefInfo(int classInfo, int nameAndTypeInfo) {
-        return addItem(new FieldrefInfo(classInfo, nameAndTypeInfo, numOfItems));
+    public int addFieldrefInfo(int classInfo, int nameAndTypeInfo) 
+    {
+        return addItem(new FieldrefInfo(classInfo, nameAndTypeInfo,
+                                        numOfItems));
     }
 
     /**
      * Adds a new <code>CONSTANT_Methodref_info</code> structure.
-     * <p/>
+     *
      * <p>This also adds a new <code>CONSTANT_NameAndType_info</code>
      * structure.
      *
-     * @param classInfo <code>class_index</code>
-     * @param name      <code>name_index</code>
-     *                  of <code>CONSTANT_NameAndType_info</code>.
-     * @param type      <code>descriptor_index</code>
-     *                  of <code>CONSTANT_NameAndType_info</code>.
-     * @return the index of the added entry.
+     * @param classInfo         <code>class_index</code>
+     * @param name              <code>name_index</code>
+     *                          of <code>CONSTANT_NameAndType_info</code>.
+     * @param type              <code>descriptor_index</code>
+     *                          of <code>CONSTANT_NameAndType_info</code>.
+     * @return          the index of the added entry.
      */
-    public int addMethodrefInfo(int classInfo, String name, String type) {
+    public int addMethodrefInfo(int classInfo, String name, String type)
+    {
         int nt = addNameAndTypeInfo(name, type);
         return addMethodrefInfo(classInfo, nt);
     }
@@ -946,30 +1024,34 @@ public final class ConstPool {
     /**
      * Adds a new <code>CONSTANT_Methodref_info</code> structure.
      *
-     * @param classInfo       <code>class_index</code>
-     * @param nameAndTypeInfo <code>name_and_type_index</code>.
-     * @return the index of the added entry.
+     * @param classInfo         <code>class_index</code>
+     * @param nameAndTypeInfo   <code>name_and_type_index</code>.
+     * @return          the index of the added entry.
      */
-    public int addMethodrefInfo(int classInfo, int nameAndTypeInfo) {
-        return addItem(new MethodrefInfo(classInfo, nameAndTypeInfo, numOfItems));
+    public int addMethodrefInfo(int classInfo, int nameAndTypeInfo)
+    {
+         return addItem(new MethodrefInfo(classInfo,
+                 nameAndTypeInfo, numOfItems));
     }
 
     /**
      * Adds a new <code>CONSTANT_InterfaceMethodref_info</code>
      * structure.
-     * <p/>
+     *
      * <p>This also adds a new <code>CONSTANT_NameAndType_info</code>
      * structure.
      *
-     * @param classInfo <code>class_index</code>
-     * @param name      <code>name_index</code>
-     *                  of <code>CONSTANT_NameAndType_info</code>.
-     * @param type      <code>descriptor_index</code>
-     *                  of <code>CONSTANT_NameAndType_info</code>.
-     * @return the index of the added entry.
+     * @param classInfo         <code>class_index</code>
+     * @param name              <code>name_index</code>
+     *                          of <code>CONSTANT_NameAndType_info</code>.
+     * @param type              <code>descriptor_index</code>
+     *                          of <code>CONSTANT_NameAndType_info</code>.
+     * @return          the index of the added entry.
      */
-    public int addInterfaceMethodrefInfo(int classInfo, String name,
-                                         String type) {
+    public int addInterfaceMethodrefInfo(int classInfo,
+                                         String name,
+                                         String type)
+    {
         int nt = addNameAndTypeInfo(name, type);
         return addInterfaceMethodrefInfo(classInfo, nt);
     }
@@ -978,26 +1060,29 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_InterfaceMethodref_info</code>
      * structure.
      *
-     * @param classInfo       <code>class_index</code>
-     * @param nameAndTypeInfo <code>name_and_type_index</code>.
-     * @return the index of the added entry.
+     * @param classInfo         <code>class_index</code>
+     * @param nameAndTypeInfo   <code>name_and_type_index</code>.
+     * @return          the index of the added entry.
      */
     public int addInterfaceMethodrefInfo(int classInfo,
-                                         int nameAndTypeInfo) {
-        return addItem(new InterfaceMethodrefInfo(classInfo, nameAndTypeInfo,
-                numOfItems));
+                                         int nameAndTypeInfo)
+    {
+        return addItem(new InterfaceMethodrefInfo(classInfo,
+                                                  nameAndTypeInfo,
+                                                  numOfItems));
     }
 
     /**
      * Adds a new <code>CONSTANT_String_info</code>
      * structure.
-     * <p/>
+     *
      * <p>This also adds a new <code>CONSTANT_Utf8_info</code>
      * structure.
      *
-     * @return the index of the added entry.
+     * @return          the index of the added entry.
      */
-    public int addStringInfo(String str) {
+    public int addStringInfo(String str)
+    {
         int utf = addUtf8Info(str);
         return addItem(new StringInfo(utf, numOfItems));
     }
@@ -1006,9 +1091,10 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_Integer_info</code>
      * structure.
      *
-     * @return the index of the added entry.
+     * @return          the index of the added entry.
      */
-    public int addIntegerInfo(int i) {
+    public int addIntegerInfo(int i)
+    {
         return addItem(new IntegerInfo(i, numOfItems));
     }
 
@@ -1016,9 +1102,10 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_Float_info</code>
      * structure.
      *
-     * @return the index of the added entry.
+     * @return          the index of the added entry.
      */
-    public int addFloatInfo(float f) {
+    public int addFloatInfo(float f)
+    {
         return addItem(new FloatInfo(f, numOfItems));
     }
 
@@ -1026,9 +1113,10 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_Long_info</code>
      * structure.
      *
-     * @return the index of the added entry.
+     * @return          the index of the added entry.
      */
-    public int addLongInfo(long l) {
+    public int addLongInfo(long l)
+    {
         int i = addItem(new LongInfo(l, numOfItems));
         if (i == numOfItems - 1)    // if not existing
             addConstInfoPadding();
@@ -1040,9 +1128,10 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_Double_info</code>
      * structure.
      *
-     * @return the index of the added entry.
+     * @return          the index of the added entry.
      */
-    public int addDoubleInfo(double d) {
+    public int addDoubleInfo(double d)
+    {
         int i = addItem(new DoubleInfo(d, numOfItems));
         if (i == numOfItems - 1)    // if not existing
             addConstInfoPadding();
@@ -1054,9 +1143,10 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_Utf8_info</code>
      * structure.
      *
-     * @return the index of the added entry.
+     * @return          the index of the added entry.
      */
-    public int addUtf8Info(String utf8) {
+    public int addUtf8Info(String utf8)
+    {
         return addItem(new Utf8Info(utf8, numOfItems));
     }
 
@@ -1064,13 +1154,15 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_MethodHandle_info</code>
      * structure.
      *
-     * @param kind  <code>reference_kind</code>
-     *              such as {@link #REF_invokeStatic <code>REF_invokeStatic</code>}.
-     * @param index <code>reference_index</code>.
-     * @return the index of the added entry.
+     * @param kind      <code>reference_kind</code>
+     *                  such as {@link #REF_invokeStatic <code>REF_invokeStatic</code>}.
+     * @param index     <code>reference_index</code>.
+     * @return          the index of the added entry.
+     *
      * @since 3.17
      */
-    public int addMethodHandleInfo(int kind, int index) {
+    public int addMethodHandleInfo(int kind, int index)
+    {
         return addItem(new MethodHandleInfo(kind, index, numOfItems));
     }
 
@@ -1078,11 +1170,13 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_MethodType_info</code>
      * structure.
      *
-     * @param desc <code>descriptor_index</code>.
-     * @return the index of the added entry.
+     * @param desc      <code>descriptor_index</code>.
+     * @return          the index of the added entry.
+     *
      * @since 3.17
      */
-    public int addMethodTypeInfo(int desc) {
+    public int addMethodTypeInfo(int desc)
+    {
         return addItem(new MethodTypeInfo(desc, numOfItems));
     }
 
@@ -1090,13 +1184,37 @@ public final class ConstPool {
      * Adds a new <code>CONSTANT_InvokeDynamic_info</code>
      * structure.
      *
-     * @param bootstrap   <code>bootstrap_method_attr_index</code>.
-     * @param nameAndType <code>name_and_type_index</code>.
-     * @return the index of the added entry.
+     * @param bootstrap     <code>bootstrap_method_attr_index</code>.
+     * @param nameAndType   <code>name_and_type_index</code>.
+     * @return          the index of the added entry.
+     *
      * @since 3.17
      */
-    public int addInvokeDynamicInfo(int bootstrap, int nameAndType) {
+    public int addInvokeDynamicInfo(int bootstrap, int nameAndType)
+    {
         return addItem(new InvokeDynamicInfo(bootstrap, nameAndType, numOfItems));
+    }
+
+    /**
+     * Adds a new <code>CONSTANT_Module_info</code>
+     * @param nameIndex         the index of the Utf8 entry.
+     * @return          the index of the added entry.
+     * @since 3.22
+     */
+    public int addModuleInfo(int nameIndex)
+    {
+        return addItem(new ModuleInfo(nameIndex, numOfItems));
+    }
+
+    /**
+     * Adds a new <code>CONSTANT_Package_info</code>
+     * @param nameIndex         the index of the Utf8 entry.
+     * @return          the index of the added entry.
+     * @since 3.22
+     */
+    public int addPackageInfo(int nameIndex)
+    {
+        return addItem(new PackageInfo(nameIndex, numOfItems));
     }
 
     /**
@@ -1104,14 +1222,15 @@ public final class ConstPool {
      *
      * @return a set of class names (<code>String</code> objects).
      */
-    public Set getClassNames() {
-        HashSet result = new HashSet();
+    public Set<String> getClassNames()
+    {
+        Set<String> result = new HashSet<String>();
         LongVector v = items;
         int size = numOfItems;
         for (int i = 1; i < size; ++i) {
             String className = v.elementAt(i).getClassName(this);
             if (className != null)
-                result.add(className);
+               result.add(className);
         }
         return result;
     }
@@ -1119,10 +1238,11 @@ public final class ConstPool {
     /**
      * Replaces all occurrences of a class name.
      *
-     * @param oldName the replaced name (JVM-internal representation).
-     * @param newName the substituted name (JVM-internal representation).
+     * @param oldName           the replaced name (JVM-internal representation).
+     * @param newName           the substituted name (JVM-internal representation).
      */
-    public void renameClass(String oldName, String newName) {
+    public void renameClass(String oldName, String newName)
+    {
         LongVector v = items;
         int size = numOfItems;
         for (int i = 1; i < size; ++i) {
@@ -1134,10 +1254,11 @@ public final class ConstPool {
     /**
      * Replaces all occurrences of class names.
      *
-     * @param classnames specifies pairs of replaced and substituted
-     *                   name.
+     * @param classnames        specifies pairs of replaced and substituted
+     *                          name.
      */
-    public void renameClass(Map classnames) {
+    public void renameClass(Map<String,String> classnames)
+    {
         LongVector v = items;
         int size = numOfItems;
         for (int i = 1; i < size; ++i) {
@@ -1146,7 +1267,8 @@ public final class ConstPool {
         }
     }
 
-    private void read(DataInputStream in) throws IOException {
+    private void read(DataInputStream in) throws IOException
+    {
         int n = in.readUnsignedShort();
 
         items = new LongVector(n);
@@ -1162,68 +1284,76 @@ public final class ConstPool {
         }
     }
 
-    private static HashMap makeItemsCache(LongVector items) {
-        HashMap cache = new HashMap();
+    private static Map<ConstInfo,ConstInfo> makeItemsCache(LongVector items)
+    {
+        Map<ConstInfo,ConstInfo> cache = new HashMap<ConstInfo,ConstInfo>();
         int i = 1;
         while (true) {
             ConstInfo info = items.elementAt(i++);
             if (info == null)
                 break;
-            else
-                cache.put(info, info);
+            cache.put(info, info);
         }
 
         return cache;
     }
 
-    private int readOne(DataInputStream in) throws IOException {
+    private int readOne(DataInputStream in) throws IOException
+    {
         ConstInfo info;
         int tag = in.readUnsignedByte();
         switch (tag) {
-            case Utf8Info.tag:                     // 1
-                info = new Utf8Info(in, numOfItems);
-                break;
-            case IntegerInfo.tag:                  // 3
-                info = new IntegerInfo(in, numOfItems);
-                break;
-            case FloatInfo.tag:                    // 4
-                info = new FloatInfo(in, numOfItems);
-                break;
-            case LongInfo.tag:                     // 5
-                info = new LongInfo(in, numOfItems);
-                break;
-            case DoubleInfo.tag:                   // 6
-                info = new DoubleInfo(in, numOfItems);
-                break;
-            case ClassInfo.tag:                    // 7
-                info = new ClassInfo(in, numOfItems);
-                break;
-            case StringInfo.tag:                   // 8
-                info = new StringInfo(in, numOfItems);
-                break;
-            case FieldrefInfo.tag:                 // 9
-                info = new FieldrefInfo(in, numOfItems);
-                break;
-            case MethodrefInfo.tag:                // 10
-                info = new MethodrefInfo(in, numOfItems);
-                break;
-            case InterfaceMethodrefInfo.tag:       // 11
-                info = new InterfaceMethodrefInfo(in, numOfItems);
-                break;
-            case NameAndTypeInfo.tag:              // 12
-                info = new NameAndTypeInfo(in, numOfItems);
-                break;
-            case MethodHandleInfo.tag:             // 15
-                info = new MethodHandleInfo(in, numOfItems);
-                break;
-            case MethodTypeInfo.tag:               // 16
-                info = new MethodTypeInfo(in, numOfItems);
-                break;
-            case InvokeDynamicInfo.tag:            // 18
-                info = new InvokeDynamicInfo(in, numOfItems);
-                break;
-            default:
-                throw new IOException("invalid constant type: " + tag + " at " + numOfItems);
+        case Utf8Info.tag :                     // 1
+            info = new Utf8Info(in, numOfItems);
+            break;
+        case IntegerInfo.tag :                  // 3
+            info = new IntegerInfo(in, numOfItems);
+            break;
+        case FloatInfo.tag :                    // 4
+            info = new FloatInfo(in, numOfItems);
+            break;
+        case LongInfo.tag :                     // 5
+            info = new LongInfo(in, numOfItems);
+            break;
+        case DoubleInfo.tag :                   // 6
+            info = new DoubleInfo(in, numOfItems);
+            break;
+        case ClassInfo.tag :                    // 7
+            info = new ClassInfo(in, numOfItems);
+            break;
+        case StringInfo.tag :                   // 8
+            info = new StringInfo(in, numOfItems);
+            break;
+        case FieldrefInfo.tag :                 // 9
+            info = new FieldrefInfo(in, numOfItems);
+            break;
+        case MethodrefInfo.tag :                // 10
+            info = new MethodrefInfo(in, numOfItems);
+            break;
+        case InterfaceMethodrefInfo.tag :       // 11
+            info = new InterfaceMethodrefInfo(in, numOfItems);
+            break;
+        case NameAndTypeInfo.tag :              // 12
+            info = new NameAndTypeInfo(in, numOfItems);
+            break;
+        case MethodHandleInfo.tag :             // 15
+            info = new MethodHandleInfo(in, numOfItems);
+            break;
+        case MethodTypeInfo.tag :               // 16
+            info = new MethodTypeInfo(in, numOfItems);
+            break;
+        case InvokeDynamicInfo.tag :            // 18
+            info = new InvokeDynamicInfo(in, numOfItems);
+            break;
+        case ModuleInfo.tag :                   // 19
+            info = new ModuleInfo(in, numOfItems);
+            break;
+        case PackageInfo.tag :                  // 20
+            info = new PackageInfo(in, numOfItems);
+            break;
+        default :
+            throw new IOException("invalid constant type: " 
+                                + tag + " at " + numOfItems);
         }
 
         addItem0(info);
@@ -1233,7 +1363,8 @@ public final class ConstPool {
     /**
      * Writes the contents of the constant pool table.
      */
-    public void write(DataOutputStream out) throws IOException {
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeShort(numOfItems);
         LongVector v = items;
         int size = numOfItems;
@@ -1244,14 +1375,16 @@ public final class ConstPool {
     /**
      * Prints the contents of the constant pool table.
      */
-    public void print() {
+    public void print()
+    {
         print(new PrintWriter(System.out, true));
     }
 
     /**
      * Prints the contents of the constant pool table.
      */
-    public void print(PrintWriter out) {
+    public void print(PrintWriter out)
+    {
         int size = numOfItems;
         for (int i = 1; i < size; ++i) {
             out.print(i);
@@ -1261,32 +1394,27 @@ public final class ConstPool {
     }
 }
 
-abstract class ConstInfo {
+abstract class ConstInfo
+{
     int index;
 
-    public ConstInfo(int i) {
-        index = i;
-    }
+    public ConstInfo(int i) { index = i; }
 
     public abstract int getTag();
 
-    public String getClassName(ConstPool cp) {
-        return null;
-    }
-
-    public void renameClass(ConstPool cp, String oldName, String newName, HashMap cache) {
-    }
-
-    public void renameClass(ConstPool cp, Map classnames, HashMap cache) {
-    }
-
-    public abstract int copy(ConstPool src, ConstPool dest, Map classnames);
-    // ** classnames is a mapping between JVM names.
+    public String getClassName(ConstPool cp) { return null; }
+    public void renameClass(ConstPool cp, String oldName, String newName,
+            Map<ConstInfo,ConstInfo> cache) {}
+    public void renameClass(ConstPool cp, Map<String,String> classnames,
+            Map<ConstInfo,ConstInfo> cache) {}
+    public abstract int copy(ConstPool src, ConstPool dest,
+            Map<String, String> classnames);
+        // ** classnames is a mapping between JVM names.
 
     public abstract void write(DataOutputStream out) throws IOException;
-
     public abstract void print(PrintWriter out);
 
+    @Override
     public String toString() {
         ByteArrayOutputStream bout = new ByteArrayOutputStream();
         PrintWriter out = new PrintWriter(bout);
@@ -1297,58 +1425,68 @@ abstract class ConstInfo {
 
 /* padding following DoubleInfo or LongInfo.
  */
-class ConstInfoPadding extends ConstInfo {
-    public ConstInfoPadding(int i) {
-        super(i);
-    }
+class ConstInfoPadding extends ConstInfo
+{
+    public ConstInfoPadding(int i) { super(i); }
 
-    public int getTag() {
-        return 0;
-    }
+    @Override
+    public int getTag() { return 0; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addConstInfoPadding();
     }
 
-    public void write(DataOutputStream out) throws IOException {
-    }
+    @Override
+    public void write(DataOutputStream out) throws IOException {}
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.println("padding");
     }
 }
 
-class ClassInfo extends ConstInfo {
+class ClassInfo extends ConstInfo
+{
     static final int tag = 7;
     int name;
 
-    public ClassInfo(int className, int index) {
+    public ClassInfo(int className, int index)
+    {
         super(index);
         name = className;
     }
 
-    public ClassInfo(DataInputStream in, int index) throws IOException {
+    public ClassInfo(DataInputStream in, int index) throws IOException
+    {
         super(index);
         name = in.readUnsignedShort();
     }
 
-    public int hashCode() {
-        return name;
+    @Override
+    public int hashCode() { return name; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof ClassInfo && ((ClassInfo)obj).name == name;
     }
 
-    public boolean equals(Object obj) {
-        return obj instanceof ClassInfo && ((ClassInfo) obj).name == name;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public int getTag() {
-        return tag;
-    }
-
-    public String getClassName(ConstPool cp) {
+    @Override
+    public String getClassName(ConstPool cp)
+    {
         return cp.getUtf8Info(name);
     }
 
-    public void renameClass(ConstPool cp, String oldName, String newName, HashMap cache) {
+    @Override
+    public void renameClass(ConstPool cp, String oldName, String newName,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String nameStr = cp.getUtf8Info(name);
         String newNameStr = null;
         if (nameStr.equals(oldName))
@@ -1369,15 +1507,19 @@ class ClassInfo extends ConstInfo {
             }
     }
 
-    public void renameClass(ConstPool cp, Map map, HashMap cache) {
+    @Override
+    public void renameClass(ConstPool cp, Map<String,String> map,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String oldName = cp.getUtf8Info(name);
         String newName = null;
         if (oldName.charAt(0) == '[') {
             String s = Descriptor.rename(oldName, map);
             if (oldName != s)
                 newName = s;
-        } else {
-            String s = (String) map.get(oldName);
+        }
+        else {
+            String s = map.get(oldName);
             if (s != null && !s.equals(oldName))
                 newName = s;
         }
@@ -1393,10 +1535,12 @@ class ClassInfo extends ConstInfo {
         }
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         String classname = src.getUtf8Info(name);
         if (map != null) {
-            String newname = (String) map.get(classname);
+            String newname = map.get(classname);
             if (newname != null)
                 classname = newname;
         }
@@ -1404,51 +1548,62 @@ class ClassInfo extends ConstInfo {
         return dest.addClassInfo(classname);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeShort(name);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Class #");
         out.println(name);
     }
 }
 
-class NameAndTypeInfo extends ConstInfo {
+class NameAndTypeInfo extends ConstInfo
+{
     static final int tag = 12;
     int memberName;
     int typeDescriptor;
 
-    public NameAndTypeInfo(int name, int type, int index) {
+    public NameAndTypeInfo(int name, int type, int index)
+    {
         super(index);
         memberName = name;
         typeDescriptor = type;
     }
 
-    public NameAndTypeInfo(DataInputStream in, int index) throws IOException {
+    public NameAndTypeInfo(DataInputStream in, int index) throws IOException
+    {
         super(index);
         memberName = in.readUnsignedShort();
         typeDescriptor = in.readUnsignedShort();
     }
 
-    public int hashCode() {
-        return (memberName << 16) ^ typeDescriptor;
-    }
+    @Override
+    public int hashCode() { return (memberName << 16) ^ typeDescriptor; }
 
-    public boolean equals(Object obj) {
+    @Override
+    public boolean equals(Object obj)
+    {
         if (obj instanceof NameAndTypeInfo) {
-            NameAndTypeInfo nti = (NameAndTypeInfo) obj;
-            return nti.memberName == memberName && nti.typeDescriptor == typeDescriptor;
-        } else
-            return false;
+            NameAndTypeInfo nti = (NameAndTypeInfo)obj;
+            return nti.memberName == memberName
+                    && nti.typeDescriptor == typeDescriptor;
+        }
+        return false;
     }
 
-    public int getTag() {
-        return tag;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public void renameClass(ConstPool cp, String oldName, String newName, HashMap cache) {
+    @Override
+    public void renameClass(ConstPool cp, String oldName, String newName,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String type = cp.getUtf8Info(typeDescriptor);
         String type2 = Descriptor.rename(type, oldName, newName);
         if (type != type2)
@@ -1461,7 +1616,10 @@ class NameAndTypeInfo extends ConstInfo {
             }
     }
 
-    public void renameClass(ConstPool cp, Map map, HashMap cache) {
+    @Override
+    public void renameClass(ConstPool cp, Map<String,String> map,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String type = cp.getUtf8Info(typeDescriptor);
         String type2 = Descriptor.rename(type, map);
         if (type != type2)
@@ -1474,20 +1632,24 @@ class NameAndTypeInfo extends ConstInfo {
             }
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         String mname = src.getUtf8Info(memberName);
         String tdesc = src.getUtf8Info(typeDescriptor);
         tdesc = Descriptor.rename(tdesc, map);
         return dest.addNameAndTypeInfo(dest.addUtf8Info(mname),
-                dest.addUtf8Info(tdesc));
+                                       dest.addUtf8Info(tdesc));
     }
 
+    @Override
     public void write(DataOutputStream out) throws IOException {
         out.writeByte(tag);
         out.writeShort(memberName);
         out.writeShort(typeDescriptor);
     }
 
+    @Override
     public void print(PrintWriter out) {
         out.print("NameAndType #");
         out.print(memberName);
@@ -1496,36 +1658,43 @@ class NameAndTypeInfo extends ConstInfo {
     }
 }
 
-abstract class MemberrefInfo extends ConstInfo {
+abstract class MemberrefInfo extends ConstInfo
+{
     int classIndex;
     int nameAndTypeIndex;
 
-    public MemberrefInfo(int cindex, int ntindex, int thisIndex) {
+    public MemberrefInfo(int cindex, int ntindex, int thisIndex)
+    {
         super(thisIndex);
         classIndex = cindex;
         nameAndTypeIndex = ntindex;
     }
 
-    public MemberrefInfo(DataInputStream in, int thisIndex) throws IOException {
+    public MemberrefInfo(DataInputStream in, int thisIndex)
+            throws IOException
+    {
         super(thisIndex);
         classIndex = in.readUnsignedShort();
         nameAndTypeIndex = in.readUnsignedShort();
     }
 
-    public int hashCode() {
-        return (classIndex << 16) ^ nameAndTypeIndex;
-    }
+    @Override
+    public int hashCode() { return (classIndex << 16) ^ nameAndTypeIndex; }
 
+    @Override
     public boolean equals(Object obj) {
         if (obj instanceof MemberrefInfo) {
-            MemberrefInfo mri = (MemberrefInfo) obj;
-            return mri.classIndex == classIndex && mri.nameAndTypeIndex == nameAndTypeIndex
+            MemberrefInfo mri = (MemberrefInfo)obj;
+            return mri.classIndex == classIndex
+                    && mri.nameAndTypeIndex == nameAndTypeIndex
                     && mri.getClass() == this.getClass();
-        } else
-            return false;
+        }
+        return false;
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         int classIndex2 = src.getItem(classIndex).copy(src, dest, map);
         int ntIndex2 = src.getItem(nameAndTypeIndex).copy(src, dest, map);
         return copy2(dest, classIndex2, ntIndex2);
@@ -1533,13 +1702,17 @@ abstract class MemberrefInfo extends ConstInfo {
 
     abstract protected int copy2(ConstPool dest, int cindex, int ntindex);
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(getTag());
         out.writeShort(classIndex);
         out.writeShort(nameAndTypeIndex);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print(getTagName() + " #");
         out.print(classIndex);
         out.print(", name&type #");
@@ -1549,319 +1722,391 @@ abstract class MemberrefInfo extends ConstInfo {
     public abstract String getTagName();
 }
 
-class FieldrefInfo extends MemberrefInfo {
+class FieldrefInfo extends MemberrefInfo
+{
     static final int tag = 9;
 
-    public FieldrefInfo(int cindex, int ntindex, int thisIndex) {
+    public FieldrefInfo(int cindex, int ntindex, int thisIndex)
+    {
         super(cindex, ntindex, thisIndex);
     }
 
-    public FieldrefInfo(DataInputStream in, int thisIndex) throws IOException {
+    public FieldrefInfo(DataInputStream in, int thisIndex)
+            throws IOException
+    {
         super(in, thisIndex);
     }
 
-    public int getTag() {
-        return tag;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public String getTagName() {
-        return "Field";
-    }
+    @Override
+    public String getTagName() { return "Field"; }
 
-    protected int copy2(ConstPool dest, int cindex, int ntindex) {
+    @Override
+    protected int copy2(ConstPool dest, int cindex, int ntindex)
+    {
         return dest.addFieldrefInfo(cindex, ntindex);
     }
 }
 
-class MethodrefInfo extends MemberrefInfo {
+class MethodrefInfo extends MemberrefInfo
+{
     static final int tag = 10;
 
-    public MethodrefInfo(int cindex, int ntindex, int thisIndex) {
+    public MethodrefInfo(int cindex, int ntindex, int thisIndex)
+    {
         super(cindex, ntindex, thisIndex);
     }
 
-    public MethodrefInfo(DataInputStream in, int thisIndex) throws IOException {
+    public MethodrefInfo(DataInputStream in, int thisIndex)
+            throws IOException
+    {
         super(in, thisIndex);
     }
 
-    public int getTag() {
-        return tag;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public String getTagName() {
-        return "Method";
-    }
+    @Override
+    public String getTagName() { return "Method"; }
 
-    protected int copy2(ConstPool dest, int cindex, int ntindex) {
+    @Override
+    protected int copy2(ConstPool dest, int cindex, int ntindex)
+    {
         return dest.addMethodrefInfo(cindex, ntindex);
     }
 }
 
-class InterfaceMethodrefInfo extends MemberrefInfo {
+class InterfaceMethodrefInfo extends MemberrefInfo
+{
     static final int tag = 11;
 
-    public InterfaceMethodrefInfo(int cindex, int ntindex, int thisIndex) {
+    public InterfaceMethodrefInfo(int cindex, int ntindex, int thisIndex)
+    {
         super(cindex, ntindex, thisIndex);
     }
 
-    public InterfaceMethodrefInfo(DataInputStream in, int thisIndex) throws IOException {
+    public InterfaceMethodrefInfo(DataInputStream in, int thisIndex)
+            throws IOException
+    {
         super(in, thisIndex);
     }
 
-    public int getTag() {
-        return tag;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public String getTagName() {
-        return "Interface";
-    }
+    @Override
+    public String getTagName() { return "Interface"; }
 
-    protected int copy2(ConstPool dest, int cindex, int ntindex) {
+    @Override
+    protected int copy2(ConstPool dest, int cindex, int ntindex)
+    {
         return dest.addInterfaceMethodrefInfo(cindex, ntindex);
     }
 }
 
-class StringInfo extends ConstInfo {
+class StringInfo extends ConstInfo
+{
     static final int tag = 8;
     int string;
 
-    public StringInfo(int str, int index) {
+    public StringInfo(int str, int index)
+    {
         super(index);
         string = str;
     }
 
-    public StringInfo(DataInputStream in, int index) throws IOException {
+    public StringInfo(DataInputStream in, int index) throws IOException
+    {
         super(index);
         string = in.readUnsignedShort();
     }
 
-    public int hashCode() {
-        return string;
+    @Override
+    public int hashCode() { return string; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof StringInfo && ((StringInfo)obj).string == string;
     }
 
-    public boolean equals(Object obj) {
-        return obj instanceof StringInfo && ((StringInfo) obj).string == string;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public int getTag() {
-        return tag;
-    }
-
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addStringInfo(src.getUtf8Info(string));
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeShort(string);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("String #");
         out.println(string);
     }
 }
 
-class IntegerInfo extends ConstInfo {
+class IntegerInfo extends ConstInfo
+{
     static final int tag = 3;
     int value;
 
-    public IntegerInfo(int v, int index) {
+    public IntegerInfo(int v, int index)
+    {
         super(index);
         value = v;
     }
 
-    public IntegerInfo(DataInputStream in, int index) throws IOException {
+    public IntegerInfo(DataInputStream in, int index) throws IOException
+    {
         super(index);
         value = in.readInt();
     }
 
-    public int hashCode() {
-        return value;
+    @Override
+    public int hashCode() { return value; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof IntegerInfo && ((IntegerInfo)obj).value == value;
     }
 
-    public boolean equals(Object obj) {
-        return obj instanceof IntegerInfo && ((IntegerInfo) obj).value == value;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public int getTag() {
-        return tag;
-    }
-
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addIntegerInfo(value);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeInt(value);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Integer ");
         out.println(value);
     }
 }
 
-class FloatInfo extends ConstInfo {
+class FloatInfo extends ConstInfo
+{
     static final int tag = 4;
     float value;
 
-    public FloatInfo(float f, int index) {
+    public FloatInfo(float f, int index)
+    {
         super(index);
         value = f;
     }
 
-    public FloatInfo(DataInputStream in, int index) throws IOException {
+    public FloatInfo(DataInputStream in, int index) throws IOException
+    {
         super(index);
         value = in.readFloat();
     }
 
-    public int hashCode() {
-        return Float.floatToIntBits(value);
+    @Override
+    public int hashCode() { return Float.floatToIntBits(value); }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof FloatInfo && ((FloatInfo)obj).value == value;
     }
 
-    public boolean equals(Object obj) {
-        return obj instanceof FloatInfo && ((FloatInfo) obj).value == value;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public int getTag() {
-        return tag;
-    }
-
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addFloatInfo(value);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeFloat(value);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Float ");
         out.println(value);
     }
 }
 
-class LongInfo extends ConstInfo {
+class LongInfo extends ConstInfo
+{
     static final int tag = 5;
     long value;
 
-    public LongInfo(long l, int index) {
+    public LongInfo(long l, int index)
+    {
         super(index);
         value = l;
     }
 
-    public LongInfo(DataInputStream in, int index) throws IOException {
+    public LongInfo(DataInputStream in, int index) throws IOException
+    {
         super(index);
         value = in.readLong();
     }
 
-    public int hashCode() {
-        return (int) (value ^ (value >>> 32));
-    }
+    @Override
+    public int hashCode() { return (int)(value ^ (value >>> 32)); }
 
+    @Override
     public boolean equals(Object obj) {
-        return obj instanceof LongInfo && ((LongInfo) obj).value == value;
+        return obj instanceof LongInfo && ((LongInfo)obj).value == value;
     }
 
-    public int getTag() {
-        return tag;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addLongInfo(value);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeLong(value);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Long ");
         out.println(value);
     }
 }
 
-class DoubleInfo extends ConstInfo {
+class DoubleInfo extends ConstInfo
+{
     static final int tag = 6;
     double value;
 
-    public DoubleInfo(double d, int index) {
+    public DoubleInfo(double d, int index)
+    {
         super(index);
         value = d;
     }
 
-    public DoubleInfo(DataInputStream in, int index) throws IOException {
+    public DoubleInfo(DataInputStream in, int index) throws IOException
+    {
         super(index);
         value = in.readDouble();
     }
 
+    @Override
     public int hashCode() {
         long v = Double.doubleToLongBits(value);
-        return (int) (v ^ (v >>> 32));
+        return (int)(v ^ (v >>> 32));
     }
 
-    public boolean equals(Object obj) {
-        return obj instanceof DoubleInfo && ((DoubleInfo) obj).value == value;
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof DoubleInfo
+                && ((DoubleInfo)obj).value == value;
     }
 
-    public int getTag() {
-        return tag;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         return dest.addDoubleInfo(value);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeDouble(value);
     }
 
-    public void print(PrintWriter out) {
+    @Override
+    public void print(PrintWriter out)
+    {
         out.print("Double ");
         out.println(value);
     }
 }
 
-class Utf8Info extends ConstInfo {
+class Utf8Info extends ConstInfo
+{
     static final int tag = 1;
     String string;
 
-    public Utf8Info(String utf8, int index) {
+    public Utf8Info(String utf8, int index)
+    {
         super(index);
         string = utf8;
     }
 
-    public Utf8Info(DataInputStream in, int index) throws IOException {
+    public Utf8Info(DataInputStream in, int index)
+            throws IOException
+    {
         super(index);
         string = in.readUTF();
     }
 
+    @Override
     public int hashCode() {
         return string.hashCode();
     }
 
+    @Override
     public boolean equals(Object obj) {
-        return obj instanceof Utf8Info && ((Utf8Info) obj).string.equals(string);
+        return obj instanceof Utf8Info
+                && ((Utf8Info)obj).string.equals(string);
     }
 
-    public int getTag() {
-        return tag;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
         return dest.addUtf8Info(string);
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out)
+            throws IOException
+    {
         out.writeByte(tag);
         out.writeUTF(string);
     }
 
+    @Override
     public void print(PrintWriter out) {
         out.print("UTF8 \"");
         out.print(string);
@@ -1879,39 +2124,47 @@ class MethodHandleInfo extends ConstInfo {
         refIndex = referenceIndex;
     }
 
-    public MethodHandleInfo(DataInputStream in, int index) throws IOException {
+    public MethodHandleInfo(DataInputStream in, int index)
+            throws IOException
+    {
         super(index);
         refKind = in.readUnsignedByte();
         refIndex = in.readUnsignedShort();
     }
 
-    public int hashCode() {
-        return (refKind << 16) ^ refIndex;
-    }
+    @Override
+    public int hashCode() { return (refKind << 16) ^ refIndex; }
 
-    public boolean equals(Object obj) {
+    @Override
+    public boolean equals(Object obj)
+    {
         if (obj instanceof MethodHandleInfo) {
-            MethodHandleInfo mh = (MethodHandleInfo) obj;
+            MethodHandleInfo mh = (MethodHandleInfo)obj;
             return mh.refKind == refKind && mh.refIndex == refIndex;
-        } else
-            return false;
+        }
+        return false;
     }
 
-    public int getTag() {
-        return tag;
+    @Override
+    public int getTag() { return tag; }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
+       return dest.addMethodHandleInfo(refKind,
+                   src.getItem(refIndex).copy(src, dest, map));
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
-        return dest.addMethodHandleInfo(refKind,
-                src.getItem(refIndex).copy(src, dest, map));
-    }
-
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeByte(refKind);
         out.writeShort(refIndex);
     }
 
+    @Override
     public void print(PrintWriter out) {
         out.print("MethodHandle #");
         out.print(refKind);
@@ -1920,36 +2173,42 @@ class MethodHandleInfo extends ConstInfo {
     }
 }
 
-class MethodTypeInfo extends ConstInfo {
+class MethodTypeInfo extends ConstInfo
+{
     static final int tag = 16;
     int descriptor;
 
-    public MethodTypeInfo(int desc, int index) {
+    public MethodTypeInfo(int desc, int index)
+    {
         super(index);
         descriptor = desc;
     }
 
-    public MethodTypeInfo(DataInputStream in, int index) throws IOException {
+    public MethodTypeInfo(DataInputStream in, int index)
+            throws IOException
+    {
         super(index);
         descriptor = in.readUnsignedShort();
     }
 
-    public int hashCode() {
-        return descriptor;
-    }
+    @Override
+    public int hashCode() { return descriptor; }
 
-    public boolean equals(Object obj) {
+    @Override
+    public boolean equals(Object obj)
+    {
         if (obj instanceof MethodTypeInfo)
-            return ((MethodTypeInfo) obj).descriptor == descriptor;
-        else
-            return false;
+            return ((MethodTypeInfo)obj).descriptor == descriptor;
+        return false;
     }
 
-    public int getTag() {
-        return tag;
-    }
+    @Override
+    public int getTag() { return tag; }
 
-    public void renameClass(ConstPool cp, String oldName, String newName, HashMap cache) {
+    @Override
+    public void renameClass(ConstPool cp, String oldName, String newName,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String desc = cp.getUtf8Info(descriptor);
         String desc2 = Descriptor.rename(desc, oldName, newName);
         if (desc != desc2)
@@ -1962,7 +2221,10 @@ class MethodTypeInfo extends ConstInfo {
             }
     }
 
-    public void renameClass(ConstPool cp, Map map, HashMap cache) {
+    @Override
+    public void renameClass(ConstPool cp, Map<String,String> map,
+            Map<ConstInfo,ConstInfo> cache)
+    {
         String desc = cp.getUtf8Info(descriptor);
         String desc2 = Descriptor.rename(desc, map);
         if (desc != desc2)
@@ -1975,70 +2237,205 @@ class MethodTypeInfo extends ConstInfo {
             }
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
+    @Override
+    public int copy(ConstPool src, ConstPool dest, Map<String,String> map)
+    {
         String desc = src.getUtf8Info(descriptor);
         desc = Descriptor.rename(desc, map);
         return dest.addMethodTypeInfo(dest.addUtf8Info(desc));
     }
 
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeShort(descriptor);
     }
 
+    @Override
     public void print(PrintWriter out) {
         out.print("MethodType #");
         out.println(descriptor);
     }
 }
 
-class InvokeDynamicInfo extends ConstInfo {
+class InvokeDynamicInfo extends ConstInfo
+{
     static final int tag = 18;
     int bootstrap, nameAndType;
 
-    public InvokeDynamicInfo(int bootstrapMethod, int ntIndex, int index) {
+    public InvokeDynamicInfo(int bootstrapMethod,
+            int ntIndex, int index)
+    {
         super(index);
         bootstrap = bootstrapMethod;
         nameAndType = ntIndex;
     }
 
-    public InvokeDynamicInfo(DataInputStream in, int index) throws IOException {
+    public InvokeDynamicInfo(DataInputStream in, int index)
+            throws IOException
+    {
         super(index);
         bootstrap = in.readUnsignedShort();
         nameAndType = in.readUnsignedShort();
     }
 
-    public int hashCode() {
-        return (bootstrap << 16) ^ nameAndType;
-    }
+    @Override
+    public int hashCode() { return (bootstrap << 16) ^ nameAndType; }
 
-    public boolean equals(Object obj) {
+    @Override
+    public boolean equals(Object obj)
+    {
         if (obj instanceof InvokeDynamicInfo) {
-            InvokeDynamicInfo iv = (InvokeDynamicInfo) obj;
-            return iv.bootstrap == bootstrap && iv.nameAndType == nameAndType;
-        } else
-            return false;
+            InvokeDynamicInfo iv = (InvokeDynamicInfo)obj;
+            return iv.bootstrap == bootstrap
+                    && iv.nameAndType == nameAndType;
+        }
+        return false;
     }
 
-    public int getTag() {
-        return tag;
+    @Override
+    public int getTag() { return tag; }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
+       return dest.addInvokeDynamicInfo(bootstrap,
+            src.getItem(nameAndType).copy(src, dest, map));
     }
 
-    public int copy(ConstPool src, ConstPool dest, Map map) {
-        return dest.addInvokeDynamicInfo(bootstrap,
-                src.getItem(nameAndType).copy(src, dest, map));
-    }
-
-    public void write(DataOutputStream out) throws IOException {
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
         out.writeByte(tag);
         out.writeShort(bootstrap);
         out.writeShort(nameAndType);
     }
 
+    @Override
     public void print(PrintWriter out) {
         out.print("InvokeDynamic #");
         out.print(bootstrap);
         out.print(", name&type #");
         out.println(nameAndType);
+    }
+}
+
+class ModuleInfo extends ConstInfo
+{
+    static final int tag = 19;
+    int name;
+
+    public ModuleInfo(int moduleName, int index)
+    {
+        super(index);
+        name = moduleName;
+    }
+
+    public ModuleInfo(DataInputStream in, int index)
+            throws IOException
+    {
+        super(index);
+        name = in.readUnsignedShort();
+    }
+
+    @Override
+    public int hashCode() { return name; }
+
+    @Override
+    public boolean equals(Object obj)
+    {
+        return obj instanceof ModuleInfo
+                && ((ModuleInfo)obj).name == name;
+    }
+
+    @Override
+    public int getTag() { return tag; }
+
+    public String getModuleName(ConstPool cp)
+    {
+        return cp.getUtf8Info(name);
+    }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
+        String moduleName = src.getUtf8Info(name);
+        int newName = dest.addUtf8Info(moduleName);
+        return dest.addModuleInfo(newName);
+    }
+
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
+        out.writeByte(tag);
+        out.writeShort(name);
+    }
+
+    @Override
+    public void print(PrintWriter out) {
+        out.print("Module #");
+        out.println(name);
+    }
+}
+
+class PackageInfo extends ConstInfo
+{
+    static final int tag = 20;
+    int name;
+
+    public PackageInfo(int moduleName, int index)
+    {
+        super(index);
+        name = moduleName;
+    }
+
+    public PackageInfo(DataInputStream in, int index)
+            throws IOException
+    {
+        super(index);
+        name = in.readUnsignedShort();
+    }
+
+    @Override
+    public int hashCode() { return name; }
+
+    @Override
+    public boolean equals(Object obj) {
+        return obj instanceof PackageInfo
+                && ((PackageInfo)obj).name == name;
+    }
+
+    @Override
+    public int getTag() { return tag; }
+
+    public String getPackageName(ConstPool cp)
+    {
+        return cp.getUtf8Info(name);
+    }
+
+    @Override
+    public int copy(ConstPool src, ConstPool dest,
+            Map<String,String> map)
+    {
+        String packageName = src.getUtf8Info(name);
+        int newName = dest.addUtf8Info(packageName);
+        return dest.addModuleInfo(newName);
+    }
+
+    @Override
+    public void write(DataOutputStream out) throws IOException
+    {
+        out.writeByte(tag);
+        out.writeShort(name);
+    }
+
+    @Override
+    public void print(PrintWriter out)
+    {
+        out.print("Package #");
+        out.println(name);
     }
 }
