@@ -15,11 +15,11 @@
  */
 package org.hotswap.agent.javassist.bytecode.annotation;
 
-import org.hotswap.agent.javassist.ClassPool;
-import org.hotswap.agent.javassist.bytecode.ConstPool;
-
 import java.io.IOException;
 import java.lang.reflect.Method;
+
+import org.hotswap.agent.javassist.ClassPool;
+import org.hotswap.agent.javassist.bytecode.ConstPool;
 
 /**
  * Byte constant value.
@@ -34,7 +34,7 @@ public class ByteMemberValue extends MemberValue {
      * Constructs a byte constant value.  The initial value is specified
      * by the constant pool entry at the given index.
      *
-     * @param index the index of a CONSTANT_Integer_info structure.
+     * @param index     the index of a CONSTANT_Integer_info structure.
      */
     public ByteMemberValue(int index, ConstPool cp) {
         super('B', cp);
@@ -44,7 +44,7 @@ public class ByteMemberValue extends MemberValue {
     /**
      * Constructs a byte constant value.
      *
-     * @param b the initial value.
+     * @param b         the initial value.
      */
     public ByteMemberValue(byte b, ConstPool cp) {
         super('B', cp);
@@ -56,14 +56,16 @@ public class ByteMemberValue extends MemberValue {
      */
     public ByteMemberValue(ConstPool cp) {
         super('B', cp);
-        setValue((byte) 0);
+        setValue((byte)0);
     }
 
+    @Override
     Object getValue(ClassLoader cl, ClassPool cp, Method m) {
-        return new Byte(getValue());
+        return Byte.valueOf(getValue());
     }
 
-    Class getType(ClassLoader cl) {
+    @Override
+    Class<?> getType(ClassLoader cl) {
         return byte.class;
     }
 
@@ -71,7 +73,7 @@ public class ByteMemberValue extends MemberValue {
      * Obtains the value of the member.
      */
     public byte getValue() {
-        return (byte) cp.getIntegerInfo(valueIndex);
+        return (byte)cp.getIntegerInfo(valueIndex);
     }
 
     /**
@@ -84,6 +86,7 @@ public class ByteMemberValue extends MemberValue {
     /**
      * Obtains the string representation of this object.
      */
+    @Override
     public String toString() {
         return Byte.toString(getValue());
     }
@@ -91,6 +94,7 @@ public class ByteMemberValue extends MemberValue {
     /**
      * Writes the value.
      */
+    @Override
     public void write(AnnotationsWriter writer) throws IOException {
         writer.constValueIndex(getValue());
     }
@@ -98,7 +102,8 @@ public class ByteMemberValue extends MemberValue {
     /**
      * Accepts a visitor.
      */
-    public void accept(org.hotswap.agent.javassist.bytecode.annotation.MemberValueVisitor visitor) {
+    @Override
+    public void accept(MemberValueVisitor visitor) {
         visitor.visitByteMemberValue(this);
     }
 }
