@@ -16,10 +16,11 @@
 
 package org.hotswap.agent.javassist.bytecode.annotation;
 
-import org.hotswap.agent.javassist.bytecode.ConstPool;
-
 import java.io.IOException;
 import java.lang.reflect.Method;
+
+import org.hotswap.agent.javassist.ClassPool;
+import org.hotswap.agent.javassist.bytecode.ConstPool;
 
 /**
  * Double floating-point number constant value.
@@ -35,7 +36,7 @@ public class DoubleMemberValue extends MemberValue {
      * Constructs a double constant value.  The initial value is specified
      * by the constant pool entry at the given index.
      *
-     * @param index the index of a CONSTANT_Double_info structure.
+     * @param index     the index of a CONSTANT_Double_info structure.
      */
     public DoubleMemberValue(int index, ConstPool cp) {
         super('D', cp);
@@ -45,7 +46,7 @@ public class DoubleMemberValue extends MemberValue {
     /**
      * Constructs a double constant value.
      *
-     * @param d the initial value.
+     * @param d     the initial value.
      */
     public DoubleMemberValue(double d, ConstPool cp) {
         super('D', cp);
@@ -60,11 +61,13 @@ public class DoubleMemberValue extends MemberValue {
         setValue(0.0);
     }
 
-    Object getValue(ClassLoader cl, org.hotswap.agent.javassist.ClassPool cp, Method m) {
-        return new Double(getValue());
+    @Override
+    Object getValue(ClassLoader cl, ClassPool cp, Method m) {
+        return Double.valueOf(getValue());
     }
 
-    Class getType(ClassLoader cl) {
+    @Override
+    Class<?> getType(ClassLoader cl) {
         return double.class;
     }
 
@@ -85,6 +88,7 @@ public class DoubleMemberValue extends MemberValue {
     /**
      * Obtains the string representation of this object.
      */
+    @Override
     public String toString() {
         return Double.toString(getValue());
     }
@@ -92,6 +96,7 @@ public class DoubleMemberValue extends MemberValue {
     /**
      * Writes the value.
      */
+    @Override
     public void write(AnnotationsWriter writer) throws IOException {
         writer.constValueIndex(getValue());
     }
@@ -99,7 +104,8 @@ public class DoubleMemberValue extends MemberValue {
     /**
      * Accepts a visitor.
      */
-    public void accept(org.hotswap.agent.javassist.bytecode.annotation.MemberValueVisitor visitor) {
+    @Override
+    public void accept(MemberValueVisitor visitor) {
         visitor.visitDoubleMemberValue(this);
     }
 }
