@@ -16,11 +16,11 @@
 
 package org.hotswap.agent.javassist.bytecode.annotation;
 
-import org.hotswap.agent.javassist.ClassPool;
-import org.hotswap.agent.javassist.bytecode.ConstPool;
-
 import java.io.IOException;
 import java.lang.reflect.Method;
+
+import org.hotswap.agent.javassist.ClassPool;
+import org.hotswap.agent.javassist.bytecode.ConstPool;
 
 /**
  * Floating-point number constant value.
@@ -36,7 +36,7 @@ public class FloatMemberValue extends MemberValue {
      * Constructs a float constant value.  The initial value is specified
      * by the constant pool entry at the given index.
      *
-     * @param index the index of a CONSTANT_Float_info structure.
+     * @param index     the index of a CONSTANT_Float_info structure.
      */
     public FloatMemberValue(int index, ConstPool cp) {
         super('F', cp);
@@ -46,7 +46,7 @@ public class FloatMemberValue extends MemberValue {
     /**
      * Constructs a float constant value.
      *
-     * @param f the initial value.
+     * @param f         the initial value.
      */
     public FloatMemberValue(float f, ConstPool cp) {
         super('F', cp);
@@ -61,11 +61,13 @@ public class FloatMemberValue extends MemberValue {
         setValue(0.0F);
     }
 
+    @Override
     Object getValue(ClassLoader cl, ClassPool cp, Method m) {
-        return new Float(getValue());
+        return Float.valueOf(getValue());
     }
 
-    Class getType(ClassLoader cl) {
+    @Override
+    Class<?> getType(ClassLoader cl) {
         return float.class;
     }
 
@@ -86,6 +88,7 @@ public class FloatMemberValue extends MemberValue {
     /**
      * Obtains the string representation of this object.
      */
+    @Override
     public String toString() {
         return Float.toString(getValue());
     }
@@ -93,14 +96,16 @@ public class FloatMemberValue extends MemberValue {
     /**
      * Writes the value.
      */
-    public void write(org.hotswap.agent.javassist.bytecode.annotation.AnnotationsWriter writer) throws IOException {
+    @Override
+    public void write(AnnotationsWriter writer) throws IOException {
         writer.constValueIndex(getValue());
     }
 
     /**
      * Accepts a visitor.
      */
-    public void accept(org.hotswap.agent.javassist.bytecode.annotation.MemberValueVisitor visitor) {
+    @Override
+    public void accept(MemberValueVisitor visitor) {
         visitor.visitFloatMemberValue(this);
     }
 }
