@@ -16,11 +16,11 @@
 
 package org.hotswap.agent.javassist.bytecode.annotation;
 
-import org.hotswap.agent.javassist.ClassPool;
-import org.hotswap.agent.javassist.bytecode.ConstPool;
-
 import java.io.IOException;
 import java.lang.reflect.Method;
+
+import org.hotswap.agent.javassist.ClassPool;
+import org.hotswap.agent.javassist.bytecode.ConstPool;
 
 /**
  * Long integer constant value.
@@ -35,7 +35,7 @@ public class LongMemberValue extends MemberValue {
      * Constructs a long constant value.  The initial value is specified
      * by the constant pool entry at the given index.
      *
-     * @param index the index of a CONSTANT_Long_info structure.
+     * @param index     the index of a CONSTANT_Long_info structure.
      */
     public LongMemberValue(int index, ConstPool cp) {
         super('J', cp);
@@ -45,7 +45,7 @@ public class LongMemberValue extends MemberValue {
     /**
      * Constructs a long constant value.
      *
-     * @param j the initial value.
+     * @param j         the initial value.
      */
     public LongMemberValue(long j, ConstPool cp) {
         super('J', cp);
@@ -60,11 +60,13 @@ public class LongMemberValue extends MemberValue {
         setValue(0L);
     }
 
+    @Override
     Object getValue(ClassLoader cl, ClassPool cp, Method m) {
-        return new Long(getValue());
+        return Long.valueOf(getValue());
     }
 
-    Class getType(ClassLoader cl) {
+    @Override
+    Class<?> getType(ClassLoader cl) {
         return long.class;
     }
 
@@ -85,6 +87,7 @@ public class LongMemberValue extends MemberValue {
     /**
      * Obtains the string representation of this object.
      */
+    @Override
     public String toString() {
         return Long.toString(getValue());
     }
@@ -92,14 +95,16 @@ public class LongMemberValue extends MemberValue {
     /**
      * Writes the value.
      */
-    public void write(org.hotswap.agent.javassist.bytecode.annotation.AnnotationsWriter writer) throws IOException {
+    @Override
+    public void write(AnnotationsWriter writer) throws IOException {
         writer.constValueIndex(getValue());
     }
 
     /**
      * Accepts a visitor.
      */
-    public void accept(org.hotswap.agent.javassist.bytecode.annotation.MemberValueVisitor visitor) {
+    @Override
+    public void accept(MemberValueVisitor visitor) {
         visitor.visitLongMemberValue(this);
     }
 }
