@@ -16,8 +16,11 @@
 
 package org.hotswap.agent.javassist.util.proxy;
 
+import java.io.InvalidClassException;
+import java.io.InvalidObjectException;
 import java.io.ObjectStreamException;
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.security.AccessController;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
@@ -29,16 +32,18 @@ import java.security.PrivilegedExceptionAction;
  * @see RuntimeSupport#makeSerializedProxy(Object)
  */
 class SerializedProxy implements Serializable {
+    /** default serialVersionUID */
+    private static final long serialVersionUID = 1L;
     private String superClass;
     private String[] interfaces;
     private byte[] filterSignature;
     private MethodHandler handler;
 
-    SerializedProxy(Class proxy, byte[] sig, MethodHandler h) {
+    SerializedProxy(Class<?> proxy, byte[] sig, MethodHandler h) {
         filterSignature = sig;
         handler = h;
         superClass = proxy.getSuperclass().getName();
-        Class[] infs = proxy.getInterfaces();
+        Class<?>[] infs = proxy.getInterfaces();
         int n = infs.length;
         interfaces = new String[n - 1];
         String setterInf = ProxyObject.class.getName();
@@ -57,15 +62,17 @@ class SerializedProxy implements Serializable {
      * @return loaded class
      * @throws ClassNotFoundException for any error
      */
-    protected Class loadClass(final String className) throws ClassNotFoundException {
+    protected Class<?> loadClass(final String className) throws ClassNotFoundException {
         try {
-            return (Class) AccessController.doPrivileged(new PrivilegedExceptionAction() {
-                public Object run() throws Exception {
+            return AccessController.doPrivileged(new PrivilegedExceptionAction<Class<?>>(){
+                @Override
+                public Class<?> run() throws Exception{
                     ClassLoader cl = Thread.currentThread().getContextClassLoader();
                     return Class.forName(className, true, cl);
                 }
             });
-        } catch (PrivilegedActionException pae) {
+        }
+        catch (PrivilegedActionException pae) {
             throw new RuntimeException("cannot load the class: " + className, pae.getException());
         }
     }
@@ -73,22 +80,31 @@ class SerializedProxy implements Serializable {
     Object readResolve() throws ObjectStreamException {
         try {
             int n = interfaces.length;
-            Class[] infs = new Class[n];
+            Class<?>[] infs = new Class[n];
             for (int i = 0; i < n; i++)
                 infs[i] = loadClass(interfaces[i]);
 
             ProxyFactory f = new ProxyFactory();
             f.setSuperclass(loadClass(superClass));
             f.setInterfaces(infs);
-            Proxy proxy = (Proxy) f.createClass(filterSignature).newInstance();
+            Proxy proxy = (Proxy)f.createClass(filterSignature).getConstructor().newInstance();
             proxy.setHandler(handler);
             return proxy;
-        } catch (ClassNotFoundException e) {
-            throw new java.io.InvalidClassException(e.getMessage());
-        } catch (InstantiationException e2) {
-            throw new java.io.InvalidObjectException(e2.getMessage());
-        } catch (IllegalAccessException e3) {
-            throw new java.io.InvalidClassException(e3.getMessage());
+        }
+        catch (NoSuchMethodException e) {
+            throw new InvalidClassException(e.getMessage());
+        }
+        catch (InvocationTargetException e) {
+            throw new InvalidClassException(e.getMessage());
+        }
+        catch (ClassNotFoundException e) {
+            throw new InvalidClassException(e.getMessage());
+        }
+        catch (InstantiationException e2) {
+            throw new InvalidObjectException(e2.getMessage());
+        }
+        catch (IllegalAccessException e3) {
+            throw new InvalidClassException(e3.getMessage());
         }
     }
 }
